<resources>
  <string name="app_name">cryptemail</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_inbox">Inbox</string>
  <string name="menu_sent">Sent</string>
  <string name="menu_drafts">Drafts</string>
  <string name="menu_setting">Setting</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="to_hint_text">To</string>
  <string name="subject_hint_text">Subject</string>
  <string name="message_hint_text">Message</string>
  <string name="menu_home">Home</string>
  <string name="checkbox_sign">Sign</string>
  <string name="hint_file_name">file name</string>
  <string name="checkbox_encrypt">Encrypt</string>
  <string name="button_verify_signature">Verify Signature</string>
  <string name="status_text">status text</string>
  <string name="button_decrypt">Decrypt</string>
  <string name="desc_email_icon">Email Icon</string>
  <string name="test_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt blandit rhoncus. In dui nibh, tristique a mollis quis, tempus in felis. Phasellus nisi velit, porttitor in mollis faucibus, lacinia quis est.</string>
  <string name="test_email">lorem@ipsum.dolor, lorem@ipsum.dolor, lorem@ipsum.dolor, lorem@ipsum.dolor</string>
  <string name="encryption_yes">encryption detected</string>
  <string name="encryption_no">no encryption detected</string>
  <string name="signature_yes">signature detected</string>
  <string name="signature_no">no signature detected</string>
  <string name="from_hint_text">from</string>
  <string name="detail_title">Detail Title</string>
  <string name="detail_title_inbox">Inbox</string>
  <string name="detail_title_ready_send">Send this email?</string>
  <string name="detail_title_temp_view">(Temporary View) Encryption Result</string>
  <string name="button_attachement">Download</string>
  <string name="button_attach">Attach</string>
  <string name="status_attachment">No Attachment</string>
  <string name="button_login">Set Account</string>
  <string name="title_account">Account</string>
  <string name="status_email_name">email name</string>
  <string name="hint_ecdsa_keyname">keypair name </string>
  <string name="button_generate_keypair">Generate KeyPair</string>
  <string name="hint_email">email</string>
  <string name="hint_password">password</string>
</resources>
