<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/menu_home"/>
    <item
      android:id="@+id/nav_inbox"
      android:icon="@drawable/ic_menu_camera"
      android:title="@string/menu_inbox"/>
    <item
      android:id="@+id/nav_sent"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_sent"/>
    <item
      android:id="@+id/nav_drafts"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_drafts"/>
  </group>

  <item android:title="@string/menu_setting">
    <menu>
      <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_setting"/>
    </menu>
  </item>

</menu>
