<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="center_vertical"
  android:orientation="horizontal">

  <ImageView
    android:id="@+id/email_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:contentDescription="@string/desc_email_icon"
    app:srcCompat="@android:drawable/ic_dialog_email"/>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
      android:id="@+id/from_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/text_margin"
      android:layout_marginStart="@dimen/text_margin"
      android:text="@string/test_email"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
      android:id="@+id/email_subject"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:text="@string/test_string"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
  </LinearLayout>

</LinearLayout>
