<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ComposeFragment">

  <EditText
    android:id="@+id/toAddressText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/text_box_margin"
    android:layout_marginLeft="@dimen/text_box_margin"
    android:layout_marginRight="@dimen/text_box_margin"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/to_hint_text"
    android:inputType="textEmailAddress"/>
  <EditText
    android:id="@+id/subjectText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/text_box_margin"
    android:layout_marginLeft="@dimen/text_box_margin"
    android:layout_marginRight="@dimen/text_box_margin"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/subject_hint_text"
    android:inputType="textEmailSubject"/>
  <EditText
    android:id="@+id/messageText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_box_margin"
    android:autofillHints=""
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/message_hint_text"
    android:inputType="none|textMultiLine"
    android:selectAllOnFocus="false"
    android:singleLine="false"/>

</LinearLayout>