<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".EmailDetailFragment">

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/text_box_margin">

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
          android:id="@+id/from_hint"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginStart="@dimen/text_box_margin"
          android:text="@string/from_hint_text"/>
        <TextView
          android:id="@+id/from_address_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginLeft="@dimen/text_box_margin"
          android:layout_marginRight="@dimen/text_box_margin"
          android:autofillHints=""
          android:ems="10"
          android:hint="@string/from_hint_text"/>
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
          android:id="@+id/to_hint"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginStart="@dimen/text_box_margin"
          android:text="@string/to_hint_text"/>
        <TextView
          android:id="@+id/to_address_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginLeft="@dimen/text_box_margin"
          android:layout_marginRight="@dimen/text_box_margin"
          android:autofillHints=""
          android:ems="10"
          android:hint="@string/to_hint_text"/>
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
          android:id="@+id/subject_hint"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginStart="@dimen/text_box_margin"
          android:text="@string/subject_hint_text"/>
        <TextView
          android:id="@+id/subject_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/text_box_margin"
          android:layout_marginLeft="@dimen/text_box_margin"
          android:layout_marginRight="@dimen/text_box_margin"
          android:autofillHints=""
          android:ems="10"
          android:hint="@string/subject_hint_text"/>
      </TableRow>
    </TableLayout>
    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
          android:id="@+id/button_decrypt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/text_margin"
          android:text="@string/button_decrypt"/>
        <TextView
          android:id="@+id/status_encryption"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/text_margin"
          android:hint="@string/status_text"/>
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
          android:id="@+id/button_verify_sign"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/text_margin"
          android:text="@string/button_verify_signature"/>
        <TextView
          android:id="@+id/status_signature"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/text_margin"
          android:hint="@string/status_text"/>
      </TableRow>
    </TableLayout>
    <TextView
      android:id="@+id/message_text"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/text_margin"
      android:autofillHints=""
      android:ems="10"
      android:gravity="start|top"
      android:hint="@string/message_hint_text"
      android:selectAllOnFocus="false"
      android:singleLine="false"/>
  </LinearLayout>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/send_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:layout_gravity="bottom|end"
    app:srcCompat="@android:drawable/ic_menu_send"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>